--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1,3 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Gruppo&display=swap');
+
+:root {
+  --orange: #F2A541;
+  --dark: #000;
+  --title-font: 'Gruppo';
+}
 html,
 body {
   padding: 0;
