--- a/components/navbar/navbar.module.scss
+++ b/components/navbar/navbar.module.scss
@@ -1,8 +1,19 @@
 .navbarcontainer {
   position: relative;
   width: 100%;
+  min-height: 70px;
   background-color: #000;
-  img {
-    width: 70px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0 20px;
+  .image {
+    position: relative;
+    width: 60px;
+    margin: 30px 0;
+  }
+  .burger {
+    color: var(--orange);
+    font-size: 30px;
   }
 }
