--- a/styles/fonts.scss
+++ b/styles/fonts.scss
@@ -1,4 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200;0,300;0,400;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,600;1,700;1,800;1,900&display=swap');
+@font-face {
+  font-family: 'Reenie Beanie';
+  src: url('./../public/fonts/ReenieBeanie-Regular.ttf');
+}
 
 $title-font: 'Nunito';
+$hand-write: 'Reenie Beanie';
 $font-mobile: clamp(1rem, calc(6px + 3vw), 3.5rem);
